// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'assetHubKusama' -> 'karura' USDT > balance on from chain 1`] = `
{
  "balance": 999000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'assetHubKusama' -> 'karura' USDT > balance on from chain 2`] = `
{
  "balance": 998000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'assetHubKusama' -> 'karura' USDT > balance on from chain 3`] = `
{
  "balance": 997000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'assetHubKusama' -> 'karura' USDT > balance on to chain 1`] = `
{
  "free": "(rounded 999000)",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'assetHubKusama' -> 'karura' USDT > balance on to chain 2`] = `
{
  "free": "(rounded 3000000)",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'assetHubKusama' -> 'karura' USDT > from chain hrmp messages 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v3": [
          {
            "reserveAssetDeposited": [
              {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x3": [
                        {
                          "parachain": 1000,
                        },
                        {
                          "palletInstance": 50,
                        },
                        {
                          "generalIndex": 1984,
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x3": [
                        {
                          "parachain": 1000,
                        },
                        {
                          "palletInstance": 50,
                        },
                        {
                          "generalIndex": 1984,
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "allCounted": 1,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": {
                    "accountId32": {
                      "id": "0x88dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
                      "network": null,
                    },
                  },
                },
                "parents": 0,
              },
            },
          },
          {
            "setTopic": "0x1321f7f4242fc20acb5e33f3003f4c5db8aeee76bb280db7a518b502ba1b316b",
          },
        ],
      },
    ],
    "recipient": 2000,
  },
]
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'assetHubKusama' -> 'karura' USDT > from chain hrmp messages 2`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v3": [
          {
            "reserveAssetDeposited": [
              {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x3": [
                        {
                          "parachain": 1000,
                        },
                        {
                          "palletInstance": 50,
                        },
                        {
                          "generalIndex": 1984,
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x3": [
                        {
                          "parachain": 1000,
                        },
                        {
                          "palletInstance": 50,
                        },
                        {
                          "generalIndex": 1984,
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "allCounted": 1,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": {
                    "accountId32": {
                      "id": "0x88dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
                      "network": null,
                    },
                  },
                },
                "parents": 0,
              },
            },
          },
          {
            "setTopic": "0x7257053364dc18e4d0358e2650b1e486c0f189c3f80bf5d0b06b98d1139705bc",
          },
        ],
      },
    ],
    "recipient": 2000,
  },
]
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'assetHubKusama' -> 'karura' USDT > from chain hrmp messages 3`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v3": [
          {
            "reserveAssetDeposited": [
              {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x3": [
                        {
                          "parachain": 1000,
                        },
                        {
                          "palletInstance": 50,
                        },
                        {
                          "generalIndex": 1984,
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x3": [
                        {
                          "parachain": 1000,
                        },
                        {
                          "palletInstance": 50,
                        },
                        {
                          "generalIndex": 1984,
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "allCounted": 1,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": {
                    "accountId32": {
                      "id": "0x88dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
                      "network": null,
                    },
                  },
                },
                "parents": 0,
              },
            },
          },
          {
            "setTopic": "0xa81ef18b74005fa977d4069a5d6004c47d0ba917f8817852e28ee24bcdee3f0b",
          },
        ],
      },
    ],
    "recipient": 2000,
  },
]
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'assetHubKusama' -> 'karura' USDT > to chain xcm events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 1000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": 0,
        "refTime": 1000000000,
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'assetHubKusama' -> 'karura' USDT > tx events 1`] = `[]`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'assetHubKusama' -> 'karura' USDT > tx events 2`] = `[]`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'assetHubKusama' -> 'karura' USDT > tx events 3`] = `[]`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > balance on from chain 1`] = `
{
  "free": 9000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > balance on from chain 2`] = `
{
  "free": 9000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > balance on from chain 3`] = `
{
  "free": 9000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > balance on to chain 1`] = `
{
  "balance": "(rounded 1000000000)",
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > balance on to chain 2`] = `
{
  "balance": "(rounded 999000000)",
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > balance on to chain 3`] = `
{
  "balance": "(rounded 1000000000)",
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > from chain hrmp messages 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v2": [
          {
            "withdrawAsset": [
              {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "palletInstance": 50,
                        },
                        {
                          "generalIndex": 1984,
                        },
                      ],
                    },
                    "parents": 0,
                  },
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "palletInstance": 50,
                        },
                        {
                          "generalIndex": 1984,
                        },
                      ],
                    },
                    "parents": 0,
                  },
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "all": null,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": {
                    "accountId32": {
                      "id": "0x88dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
                      "network": {
                        "any": null,
                      },
                    },
                  },
                },
                "parents": 0,
              },
              "maxAssets": 1,
            },
          },
        ],
      },
    ],
    "recipient": 1000,
  },
]
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > from chain hrmp messages 2`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v2": [
          {
            "subscribeVersion": {
              "maxResponseWeight": 0,
              "queryId": 31,
            },
          },
        ],
      },
    ],
    "recipient": 1000,
  },
]
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > from chain hrmp messages 3`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v2": [
          {
            "withdrawAsset": [
              {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "palletInstance": 50,
                        },
                        {
                          "generalIndex": 1984,
                        },
                      ],
                    },
                    "parents": 0,
                  },
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "palletInstance": 50,
                        },
                        {
                          "generalIndex": 1984,
                        },
                      ],
                    },
                    "parents": 0,
                  },
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "all": null,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": {
                    "accountId32": {
                      "id": "0x88dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
                      "network": {
                        "any": null,
                      },
                    },
                  },
                },
                "parents": 0,
              },
              "maxAssets": 1,
            },
          },
        ],
      },
    ],
    "recipient": 1000,
  },
]
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > to chain xcm events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 2000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": "(rounded 7200)",
        "refTime": "(rounded 320000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > to chain xcm events 2`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 2000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": "(rounded 7200)",
        "refTime": "(rounded 320000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > tx events 1`] = `
[
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000,
          },
          "id": {
            "interior": {
              "X3": [
                {
                  "Parachain": 1000,
                },
                {
                  "PalletInstance": 50,
                },
                {
                  "GeneralIndex": "(rounded 2000)",
                },
              ],
            },
            "parents": 1,
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": 1000,
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000,
        },
        "id": {
          "interior": {
            "X3": [
              {
                "Parachain": 1000,
              },
              {
                "PalletInstance": 50,
              },
              {
                "GeneralIndex": "(rounded 2000)",
              },
            ],
          },
          "parents": 1,
        },
      },
      "sender": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "TransferredAssets",
    "section": "xTokens",
  },
]
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > tx events 2`] = `
[
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000,
          },
          "id": {
            "interior": {
              "X3": [
                {
                  "Parachain": 1000,
                },
                {
                  "PalletInstance": 50,
                },
                {
                  "GeneralIndex": "(rounded 2000)",
                },
              ],
            },
            "parents": 1,
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": 1000,
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000,
        },
        "id": {
          "interior": {
            "X3": [
              {
                "Parachain": 1000,
              },
              {
                "PalletInstance": 50,
              },
              {
                "GeneralIndex": "(rounded 2000)",
              },
            ],
          },
          "parents": 1,
        },
      },
      "sender": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "TransferredAssets",
    "section": "xTokens",
  },
]
`;

exports[`'assetHubKusama' <-> 'karura' xcm transfer 'USDT' > 'karura' -> 'assetHubKusama' USDT > tx events 3`] = `
[
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000,
          },
          "id": {
            "interior": {
              "X3": [
                {
                  "Parachain": 1000,
                },
                {
                  "PalletInstance": 50,
                },
                {
                  "GeneralIndex": "(rounded 2000)",
                },
              ],
            },
            "parents": 1,
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": 1000,
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000,
        },
        "id": {
          "interior": {
            "X3": [
              {
                "Parachain": 1000,
              },
              {
                "PalletInstance": 50,
              },
              {
                "GeneralIndex": "(rounded 2000)",
              },
            ],
          },
          "parents": 1,
        },
      },
      "sender": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "TransferredAssets",
    "section": "xTokens",
  },
]
`;
